# SSHKeySight

./: .gitignore  README.md  deploy_ssh_key_client.sh
.github/ISSUE_TEMPLATE/: proposal.md
.github/workflows/: rust.yml  sshkeysight.yml
ssh-key-client/: Cargo.toml  servers.csv
ssh-key-server/: .gitignore  Cargo.toml
ssh-key-server/src/: main.rs
ssh-key-server/templates/: index.hbs  login.html.hbs
ssh_key_client/: Cargo.toml
ssh_key_client/src/: main.rs
ssh_key_server/: .gitignore  credentials.yaml
ssh_key_server/src/: main.rs
ssh_key_server/templates/: index.hbs  login.html.hbs
