[package]
name = "ssh_key_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11" 
serde = "1.0.137" 
serde_json = "1.0.81"
rocket_contrib = { version = "0.4.11", features = ["json", "handlebars_templates"] }
serde_derive = "1.0" 
bcrypt = "0.10"
serde_yaml = "0.8"
base64 = "0.13"
